Fix operator precedence in SizesCalcParser.cpp https://bugs.webkit.org/show_bug.cgi?id=254697 <rdar://107681323>

Reviewed by NOBODY (OOPS!).

Fix operator precedence in `SizesCalcParser.cpp` and write tests for it.
This improves size calculations and could improve experience on
mobile/tablets when rotating from landscape -> horizontal and viceversa.

* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/css/parser/SizesCalcParser.cpp:
(WebCore::SizesCalcParser::handleOperator):
* Source/WebCore/css/parser/SizesCalcParser.h:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WebCore/SizesCalcParserTests.cpp: Added.
(TestWebKitAPI::TEST(SizesCalcParserTest, TestSizesCalcs)):